# observability-playground

./: README.md
nagios-otel/: nagios-otel.py  pyproject.toml
tester/: nagios-otel.py  pyproject.toml
